<resources>
    <string name="app_name">Crypto Calender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oneDay">24h</string>
    <string name="threeDay">3d</string>
    <string name="Week">7d</string>
    <string name="Month">1m</string>
    <string name="threeMonth">3m</string>
    <string name="Year">1y</string>
    <string name="All">All</string>
    <string name="AllTime">All Time</string>
    <string name="noChartDataString">No Chart Data :(</string>
    <string name="history_label" translatable="false">historyLabel</string>

    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_label">Settlement Currency</string>
    <string name="unrounded_usd_chart_price_format">&#36; %1$s</string>

    <string name="pref_unit_usd_value" translatable="false">USD</string>
    <string name="pref_unit_btc_value" translatable="false">BTC</string>

    <string name="pref_interval_key" translatable="false">interval</string>
    <string name="pref_interval_label">HistoChart Interval</string>

    <string name="pref_interval_label_histominute">Minute</string>
    <string name="pref_interval_label_histohour">Hour</string>
    <string name="pref_interval_label_histoday">Day</string>

    <string name="pref_interval_histominute_value" translatable="false">minute</string>
    <string name="pref_interval_histohour_value" translatable="false">hour</string>
    <string name="pref_interval_histoday_value" translatable="false">day</string>

</resources>
